--- a/index.html
+++ b/index.html
@@ -36,6 +36,26 @@
                     style="stroke: none; fill: #fff;"></path>
             </svg></div>
     </header>
+    <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.5.0/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyA7Bl_UqAQOJlR3TE2JjJ0c__3BPJc7Jts",
+    authDomain: "iotec-6dfa9.firebaseapp.com",
+    databaseURL: "https://iotec-6dfa9-default-rtdb.firebaseio.com",
+    projectId: "iotec-6dfa9",
+    storageBucket: "iotec-6dfa9.appspot.com",
+    messagingSenderId: "418276281107",
+    appId: "1:418276281107:web:e32b50ea55dfc202d668e6"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+</script>
     <main>
         <section class="contenedor sobre-nosotros">
             <h2 class="titulo">Nuestro producto</h2>
