--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         // https://firebase.google.com/docs/web/setup#available-libraries
 
         // Your web app's Firebase configuration
-      const firebaseConfig = {
+      var firebaseConfig = {
         apiKey: "AIzaSyA7Bl_UqAQOJlR3TE2JjJ0c__3BPJc7Jts",
         authDomain: "iotec-6dfa9.firebaseapp.com",
         databaseURL: "https://iotec-6dfa9-default-rtdb.firebaseio.com",
