--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina web IoTec</title>
-    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="logo.png" type="x-icon">
     <link rel="stylesheet" href="estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,7 +69,7 @@
         <section class="contenedor sobre-nosotros">
             <h2 class="titulo">Nuestro producto</h2>
             <div class="contenedor-sobre-nosotros"></div>
-            <img src="img/riego.jfif" alt="" class="imagen-about-us">
+            <img src="riego.jfif" alt="" class="imagen-about-us">
             <div class="contenido-textos">
             <h3><span>1</span>La solución a una problemática común</h3>
             <p>Como sabemos el mercado agrícola es de los más importantes dentro de la industria, por lo que mantener siempre en
@@ -88,14 +88,14 @@
                     <div class="imagen-port">
                         <img src="img/tabl.png" alt="">
                         <div class="hover-galeria">
-                            <img src="img/mano clic.jpg" alt="">
+                            <img src="mano clic.jpg" alt="">
                             <p>nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-port">
-                        <img src="img/cel.png" alt="">
+                        <img src="cel.png" alt="">
                         <div class="hover-galeria">
-                            <img src="img/mano clic.jpg" alt="">
+                            <img src="mano clic.jpg" alt="">
                             <p>nuestro trabajo</p>
                         </div>
                     </div>
@@ -107,7 +107,7 @@
             <h2 class="titulo">Que dicen nuestros clientes</h2>
             <div class="client">
                 <div class="clients">
-                    <img src="img/clientes.jpg" alt="">
+                    <img src="clientes.jpg" alt="">
                     <div class="contenido-texto-card">
                         <p>Nuestros clientes se sienten seguros al saber que están con una compañía que, aunque sea nueva, ¡es de gran confianza!,
                         además de que nos respaldan estudios de mercado y clientes satisfechos.
@@ -122,28 +122,28 @@
             <h2 class="titulo">Equipo de trabajo altamente calificado</h2>
             <div class="cards">
                 <div class="card">
-                    <img src="img/Jorge.jpg" alt="">
+                    <img src="Jorge.jpg" alt="">
                     <div class="contenido-texto-card">
                         <p>Jorge de Jesús
                         Encargado del área práctica, mente estadística y de rápida reacción</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="img/Marco.jpg" alt="">
+                    <img src="Marco.jpg" alt="">
                     <div class="contenido-texto-card">
                         <p>Marco Antonio
                         Encargado de Base de datos, eficaz, divertido y muy sociable</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="img/Julio.jpg" alt="">
+                    <img src="Julio.jpg" alt="">
                     <div class="contenido-texto-card">
                         <p>Julio Martínez
                         Encargado de HTML, Bueno en lo que hace y sociable.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="img/Diego.jfif" alt="">
+                    <img src="Diego.jfif" alt="">
                     <div class="contenido-texto-card">
                         <p>Diego Alfonso
                         Frio , calculador matemático, lo sabe a todo pero no puede leer a mas de 20 cm</p>
@@ -156,13 +156,13 @@
                 <h2 class="titulo">Nuestros servicios</h2>
                 <div class="servicio-cont">
                     <div class="servicio-int">
-                        <img src="img/servivio a cliente.jfif" alt="">
+                        <img src="servivio a cliente.jfif" alt="">
                         <h3>Asesoramiento y servicio al cliente</h3>
                         <p>¡Contáctanos cuando quieras! Puedes llamarnos o mandarnos un email y te atenderemos según tu problema ya sea consultas o
                         problemas, que dudamos que tengas con nuestro increíble producto.</p>
                     </div>
                     <div class="servicio-int">
-                        <img src="img/mantenimiento.jpg" alt="">
+                        <img src="mantenimiento.jpg" alt="">
                         <h3>Mantenimiento</h3>
                         <p>Nuestro Producto cuenta con distintos planes de mantenimiento que podrán serte siempre de gran ayuda, de igual manera si
                         no tienes un plan, siempre puedes contactarnos para hacer visitas cuando nos lo indique!</p>
