--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <h2 class="titulo">¡Estatus de tu cultivo!</h2>
                 <div class="galeria-port">
                     <div class="imagen-port">
-                        <img src="img/tabl.png" alt="">
+                        <img src="tabl.png" alt="">
                         <div class="hover-galeria">
                             <img src="mano clic.jpg" alt="">
                             <p>nuestro trabajo</p>
